<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#F2F4F7"
        android:padding="10dp"
        tools:context=".views.AuthActivity">


        <ImageButton
            android:id="@+id/backButtonSignUp"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignParentLeft="true"
            android:layout_marginTop="15dp"
            android:layout_marginStart="15dp"
            android:background="#0000"
            app:layout_constraintStart_toStartOf="parent"
            app:srcCompat="@drawable/ic_arrow_back" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/midGuideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.25" />

        <EditText
            android:id="@+id/register_username"
            style="@style/user_text_input"
            android:layout_marginTop="20dp"
            android:hint="@string/username"
            android:inputType="textPersonName"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/midGuideline"/>

        <EditText
            android:id="@+id/register_email"
            style="@style/user_text_input"
            android:layout_marginTop="20dp"
            android:hint="@string/prompt_email"
            android:inputType="textEmailAddress"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/register_username" />

        <EditText
            android:id="@+id/register_password"
            style="@style/user_text_input"
            android:layout_marginTop="20dp"
            android:hint="@string/prompt_password"
            android:inputType="textPassword"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/register_email" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/signUpButton"
            style="@style/green_word_button_style"
            android:text="@string/sign_up"
            android:layout_marginTop="20dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/register_password" />

        <View
            android:id="@+id/lineDivider"
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:layout_marginTop="25dp"
            android:background="#c0c0c0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/signUpButton" />

        <TextView
            android:id="@+id/orBox"
            android:layout_width="50dp"
            android:layout_height="20dp"
            android:background="#F2F4F7"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="OR"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/lineDivider"
            app:layout_constraintBottom_toBottomOf="@id/lineDivider"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/signUpGoogleButton"
            style="@style/white_word_button_style"
            android:text="Sign Up with Google"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="@id/botGuideline"
            app:layout_constraintTop_toBottomOf="@+id/lineDivider" />


        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/botGuideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.9" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>